# titlis-ai

./: .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  fly.toml  pyproject.toml
.titlis/: service.yaml
context/rules/: .gitignore  OPS-001.yaml  PERF-001.yaml  PERF-002.yaml  PERF-003.yaml  RES-001.yaml  RES-002.yaml  RES-003.yaml  RES-004.yaml  RES-005.yaml  RES-006.yaml  RES-007.yaml  RES-008.yaml  RES-009.yaml  RES-010.yaml  RES-011.yaml  RES-012.yaml  RES-013.yaml  RES-014.yaml  RES-015.yaml  RES-016.yaml  RES-017.yaml  RES-018.yaml  RES-019.yaml  SEC-001.yaml  SEC-002.yaml  SEC-003.yaml  SEC-004.yaml
scripts/: seed_rules.py
src/: main.py  settings.py
src/bootstrap/: dependencies.py
src/domain/: models.py
src/infrastructure/: github_app_client.py  prbot_client.py  udp_client.py
src/observability/: langfuse_handler.py  metrics.py
src/pipeline/: graph.py  session.py  state.py
src/routes/: agent.py  explain.py  feedback.py  health.py  knowledge.py  metrics.py  prbot.py  remediate.py
src/services/: agent_service.py  embedding_service.py  knowledge_seeder.py  llm_service.py  mcp_adapter.py  prompt_builder.py
src/tools/: base.py  campaign_tools.py  github_tools.py  read_tools.py  slo_tools.py
src/utils/: logger.py  resilience.py
tests/unit/: test_agent_service.py  test_agent_thinking.py  test_embedding_service.py  test_explain_route.py  test_feedback_route.py  test_github_tools.py  test_graph_helpers.py  test_knowledge_client.py  test_knowledge_route.py  test_knowledge_seeder.py  test_llm_service.py  test_mcp_adapter.py  test_mcp_sessions.py  (+8 more)
(+10 files in other folders)
