[tool.poetry]
name = "titlis-ai"
version = "0.1.0"
description = "Titlis AI Assistant — explica findings de scorecard e abre PRs de remediação"
authors = ["Titlis Platform Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
litellm = "^1.55.0"
langgraph = "^0.3.5"
httpx = "^0.27.0"
python-json-logger = "^3.2.0"
langfuse = "^2.0.0"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
